--- a/day02/koa-setup/package.json
+++ b/day02/koa-setup/package.json
@@ -2,6 +2,7 @@
   "name": "koa-setup",
   "version": "1.0.0",
   "description": "",
+  "bin": "./bin/kkb.js",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -12,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
+    "execa": "^5.1.1",
+    "inquirer": "^8.1.5",
     "prettier": "^2.4.1"
   }
 }
