--- a/day02/learn-webpack/package.json
+++ b/day02/learn-webpack/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "server": "webpack server"
+    "dev": "webpack server"
   },
   "keywords": [],
   "author": "",
@@ -64,8 +64,10 @@
     "json-parse-better-errors": "^1.0.2",
     "json-schema-traverse": "^0.4.1",
     "kind-of": "^6.0.3",
+    "loadash": "^1.0.0",
     "loader-runner": "^4.2.0",
     "locate-path": "^5.0.0",
+    "lodash": "^4.17.21",
     "merge-stream": "^2.0.0",
     "mime-db": "^1.49.0",
     "mime-types": "^2.1.32",
