--- a/day02/learn-vite/mini-vite/package.json
+++ b/day02/learn-vite/mini-vite/package.json
@@ -12,14 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.13.1",
-
+    "koa-body": "^4.1.3",
     "koa-router": "^10.0.0",
-
+    "koa-static": "^5.0.0",
     "koa-views": "^7.0.1",
     "pug": "^3.0.2",
-
-    "koa-body": "^4.1.3",
-
-    "koa-static": "^5.0.0"
+    "vue": "^3.2.12"
   }
 }
